<resources>
    <string name="app_name">Transmit</string>
    <string name="action_my_account">Аккаунт</string>
    <string name="action_my_games">Мои Игры</string>
    <string name="action_my_goods">Мои Вещи</string>
    <string name="action_exit">Выйти</string>

    <string name="settings_default_username">Ivanov</string>
    <string name="settings_default_status">в сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_number">+791111111111</string>
    <string name="settings_label_phone_number">Нажмите, чтобы изменить номер телефона</string>
    <string name="settings_default_login">yurapetrov</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_default_bio">О себе</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Аккаунт</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_send_info">Мы отправили код проверки на ваш телефон</string>
    <string name="register_default_code_hint">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_btn_next">register_btn_next</string>
    <string name="register_phone_hint">- - - - - - - - - - -</string>
    <string name="register_toast_enter_phone" />
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register_test">RegisterTestActivity</string>
    <string name="cd_register_image">cd_register_image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="settings_toast_name_is_empty">Имя не может быть пустым</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_hint_input_username">username</string>
    <string name="settings_hint_input_bio">bio</string>
    <string name="clear_chat">Очистить чат</string>
    <string name="delete_chat">Удалить чат</string>
    <string name="create_group">Создать группу</string>
    <string name="action_myContacts">Мои Контакты</string>
    <string name="play">play</string>
    <string name="stop">stop</string>
    <string name="action_myMessages">Сообщения</string>
    <string name="action_my_groups">Мои группы</string>
    <string name="exit_chat">Выйти из чата</string>
    <string name="add_goods_change">Добавть вещь для обмена</string>
    <string name="goods_all">Всего вещей:</string>
    <string name="goods_descriptions">Описание товара</string>
    <string name="goods_description_change">Нажмите, чтобы изменить описание</string>
    <string name="settings_other">Дополнительно</string>
    <string name="settings_region">Регион</string>

    <plurals name="count_members">
        <item quantity="one">%d участник</item>
        <item quantity="few">%d участника</item>
        <item quantity="many">%d участников</item>
        <item quantity="other">%d участников</item>
    </plurals>
</resources>