<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title=""
        android:icon="@drawable/ic_btn_menu"
        app:showAsAction="ifRoom">
        <menu>

            <item
                android:id="@+id/action_account"
                android:icon="@drawable/ic_btn_menu_settings"
                android:orderInCategory="100"
                android:title="@string/action_my_account"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_myGoods"
                android:icon="@drawable/ic_btn_menu_goods"
                android:orderInCategory="100"
                android:title="@string/action_my_goods"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_myGame"
                android:orderInCategory="100"
                android:title="@string/action_my_games"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_exit"
                android:orderInCategory="100"
                android:title="@string/action_exit"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>